--- a/app/views/accounts/profile.html.erb
+++ b/app/views/accounts/profile.html.erb
@@ -10,7 +10,7 @@
         <div class="profile-stats"><%= @account.posts.count %> posts</div>
         <div class="profile-stats"><%= @account.total_followers %> followers</div>
         <div class="profile-stats"><%= @account.total_following %> following</div>
-        <p><%= @account.full_name %>
+        <p><%= @account.full_name %></p>
         <%= simple_format @account.description %>
         <p><%= link_to @account.website if @account.website.present? %></p>
     </div>
