--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,15 @@
 <%= form_for @post, html: { multipart: true } do |f| %>
 
+<div class="form-group"
+<%= f.label :image %>
 <%= f.file_field :image, class: "form_control" %>
-
 <%= f.hidden_field :image_cache %>
+</div>
+
+<div class="form-group"
+<%= f.label :description %>
+<%= f.text_area :description, class: "form_control" %>
+</div>
 
 <%= f.submit "Save Post", class: "btn btn-success" %>
 
